fixed links in the dark mode

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,5 +36,5 @@ body {
 }
 
 .dark .post-content a {
-  color: rgb(255, 0, 0);
+  color: rgb(176, 179, 238);
 }
